# NEditor

./: .clang-format  .gitignore  CMakeLists.txt  buildScript.sh  test.txt
.github/workflows/: build-quality-check.yml  clang-format-check.yml  cmake-single-platform.yml
src/: Config.cpp  Config.h  Cursor.cpp  Cursor.h  Editor.cpp  Editor.h  InputController.cpp  InputController.h  Lerping.cpp  Lerping.h  TextDocument.cpp  TextDocument.h  main.cpp  test2.cpp  tomltest2.hpp
